css/main-1.6.css
/* ... */
#introtext .head-nichole {
    font-family: "Indie Flower", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    font-size: 2em;
    line-height: 100%;
}
#introtext .amp {
    position: relative;
    top: 19px;
    margin-left: -10px;
    font-size: 0.7em;
}
#introtext .head-rob {
    font-family: "Indie Flower", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    font-size: 2em;
    line-height: 100%;
}
#introtext .date {
    margin-top: 10px;
    font-family: "Indie Flower", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    font-size: 1em;
}

/* ==============
    MOBILE: Menu
   ============== */

nav {
    z-index: 42;
}

nav ul {
    font-family:"futura_ltbook",Arial,sans-serif;
    font-weight: normal;
    margin: 0;
    padding: 0;
}

nav a {
    display: block;
    margin-bottom: 10px;
    padding: 5px 0;
    text-align: center;
    text-decoration: none;
    font-weight: bold;
    color: white;
    background: transparent;
    white-space: nowrap;
    outline: none;
}

nav li a:hover {
    color: #fff;
    background: #b1bf92;
    text-decoration: none;
    outline: none;
}
nav li a.selected {
    color: #fff;
    background: #b1bf92;
    text-decoration: none;
    outline: none;
}

/** firefox remove outline **/
nav ul li a:focus {outline:none;}
nav ul li a::-moz-focus-inner {border:0;}



/* ==============
    MOBILE: Main
   ============== */

.main {
    padding: 5% 0;
}
.main header {
    float: left;
    width: 80%;
}

/* ==========================================================================
   Brad's custom styles
   ========================================================================== */
* { margin: 0; padding: 0; }
html {

}

body {
    font-family: "futura_ltbook", "HelveticaNeueLTStdRegular","HelveticaNeue", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
    color: #fff;
    text-align: center;

}

#bg-image {
    position: fixed; 
    top: -50%; 
    left: -50%; 
    width: 200%; 
    height: 200%;
}
#bg-image img {
    position: absolute; 
    top: 0; 
    left: 0; 
    right: 0; 
    bottom: 0; 
    margin: auto; 
    min-width: 50%;
    min-height: 50%;
}

#bg-container {
}

#container {
    background-image:url("../img/bg-pic2.jpg") no-repeat;
    background-attachment:fixed;
    background position:left top;
    background-size:cover;
    width:100%;
    height:300px;
}

section {
    text-align: center;
    padding: 25px;
    background-color: black;
    height: 100%;
    margin-top: 200px;
    color: white;

    -ms-border-radius: 8px;
    -o-border-radius: 8px;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    border-radius: 8px;

    /* Fallback for web browsers that doesn't support RGBa */
    background: rgb(0, 0, 0);
    /* RGBa with 0.7 opacity */
    background: rgba(0, 0, 0, 0.7);
    /* For IE 5.5 - 7*/
    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#B2000000, endColorstr=#B2000000);
    /* For IE 8*/
    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#B2000000, endColorstr=#B2000000)";
}

section h1 {

    font-family: "Indie Flower", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    font-size: 2.6em;

}
section h2 {
    font-size: 1.1em;
    line-height: 120%;
    padding: 0 0px;
}

.column {
    float: none;
    width: 100%;
    padding: 0;
    margin: 0;
}
.column p {
    font-size: 1em;
    line-height: 145%;
    padding: 0;
}

/* ==========================================================================
   Media Queries
   ========================================================================== */
@media only screen and (-webkit-min-device-pixel-ratio: 3) {
 #container {
            background:url("../img/bg-pic-mobile2X.jpg") no-repeat;
            background-size: 414px 736px;
            -webkit-background-size: 414px 736px;
            -moz-background-size: 414px 736px;
            -o-background-size: 414px 736px;
            background-attachment: scroll;
       }
   }

@media screen and (min-width: 320px) {
        #introtext {
        width: 290px;
    }
        .column {
            display: inline-block;
        }

        .column img {
            vertical-align: middle;
        }

        .txt-size {
            display: inline-block;
        }

}
 #container {
            background:url("../img/bg-pic-mobile.jpg") no-repeat;
            background-size: 414px 736px;
            -webkit-background-size: 414px 736px;
            -moz-background-size: 414px 736px;
            -o-background-size: 414px 736px;
            background-attachment: scroll;
       }
   }


@media screen and (min-width: 360px) {
        #introtext {
        width: 320px;
    }
}

@media screen and (min-width: 375px) {
    #introtext {
        width: 335px;
    }

}

@media screen and (min-width: 425px) {
    #introtext {
        width: 380px;
    }

}
/* ... */

